# trelloparse

./: .gitignore  LICENSE  README.md  main.hs  trelloparse.cabal
src/: TrelloParse.hs
