Name:                   trelloparse
Version:                0.0.0
Author:                 Joe Ferris <jferris@thoughtbot.com>
Maintainer:             Joe Ferris <jferris@thoughtbot.com>
License:                MIT
License-File:           LICENSE
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -fno-warn-orphans
  Exposed-Modules:      TrelloParse
  Build-Depends:        base >= 4 && < 5
                      , parsec
                      , text
  Default-Extensions:   OverloadedStrings

Executable trelloparse
  Main-Is:              main.hs
  Build-Depends:        base
                      , trelloparse
                      , text
  Default-Language:     Haskell2010
